# hscc

./: .gitpod.Dockerfile  .gitpod.yml  README.md  hscc.cabal  package.yaml
.github/workflows/: build.yaml
app/: Main.hs
src/: Assembly.hs  Ast.hs  Compiler.hs  Main.hs  Parser.hs  Pretty.hs  ProgramParser.hs  RawExpression.hs
src/Ast/: BlockItem.hs  Expression.hs  Function.hs  Identifier.hs  Operator.hs  Program.hs  Statement.hs  Type.hs
test/: AssemblySpec.hs  ParserSpec.hs  ProgramParserSpec.hs
test/Ast/: BlockItemSpec.hs  ExpressionSpec.hs  FunctionSpec.hs  IdentifierSpec.hs  OperatorSpec.hs  ProgramSpec.hs  StatementSpec.hs  TypeSpec.hs
