name:                hscc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Zylphrex/hscc#readme
license:             MIT
license-file:        LICENSE
author:              Tony
maintainer:          example@example.com
copyright:           2021 Tony
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hscc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
